<resources>
    <string name="app_name">LifeBeam</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have account? </string>
    <string name="signin">Signin</string>
    <string name="or">Or</string>
    <string name="logout">Logout</string>
    <string name="signin_with_google">Signin with_</string>
    <string name="default_web_client_id">1:425997828382:android:1c16bddda5ca356947090f</string>
    <string name="login_success">"Hello %1$s, we will help you to track your health. Let's be fit!"</string>
    <string name="account">Account</string>
    <string name="options">Options</string>
    <string name="profile">Profile</string>
    <string name="image">Image</string>
    <string name="body">Body</string>
    <string name="tab_profile_1">Profile</string>
    <string name="tab_profile_2">Body</string>
    <string name="tab_profile_3">Result</string>
    <string name="tab_daily_1">Activities</string>
    <string name="tab_daily_2">Diets</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="birth">Birth</string>
    <string name="age">Age</string>
    <string name="years">years</string>
    <string name="update">Update</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight_unit">kg</string>
    <string name="height_unit">meter</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="diet_name">Diet Name</string>
    <string name="diet_amount">ammount: %1$s</string>
    <string name="diet_calories">Total calories: %1$s</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_amount">Ammount: %1$s %2$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation_message">Are you sure want to logout?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select here</string>
    <string name="decimal_hint">*Use full stop (.) to write decimal</string>
    <string name="amount">Amount</string>
    <string name="activities">Select activities</string>
    <string name="empty_field">This field must be filled.</string>
    <string name="empty_selection">Please select one.</string>
    <string name="diets">Select diets</string>
    <string name="set_date">Set Date</string>
    <string name="status">Status</string>
    <string name="calorie_offset">Calorie Offset</string>
    <string name="day_prediction">Day Prediction</string>
    <string name="day_left_to">%1$s day left, to %2$s.</string>
    <string name="disclaimer_message">*This is just prediction and may not be accurate.*</string>
</resources>