<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view ="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_diet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/diet_name" />
        <TextView
            android:id="@+id/tv_diet_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintVertical_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@id/tv_diet_calories"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_diet_name"
            tools:text="@string/diet_amount" />

        <TextView
            android:id="@+id/tv_diet_calories"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintVertical_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_diet_name"
            card_view:layout_constraintEnd_toStartOf="@id/tv_diet_amount"
            tools:text="@string/diet_calories" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>