<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.BodyFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="?attr/colorSecondary"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_weight"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_weight"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="80dp"
                    android:textSize="12sp"
                    app:hintTextColor="?attr/colorPrimary"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:cursorColor="?attr/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/in_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="?attr/colorPrimary"
                        android:inputType="number"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_unit"
                    android:textSize="18sp"
                    android:textColor="?attr/colorPrimary"
                    android:layout_marginStart="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_weight"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_height"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/con_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_height"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="80dp"
                    android:textSize="12sp"
                    app:hintTextColor="?attr/colorPrimary"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:cursorColor="?attr/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/in_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="?attr/colorOnPrimary"
                        android:inputType="number"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/height_unit"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_height"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.example.lifebeam.ui.layout_custom.CustomButton
                android:id="@+id/btn_update"
                style="@style/ButtonStroke"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:paddingEnd="15dp"
                android:paddingStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:text="@string/update"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp"
                android:elevation="10dp"
                android:translationZ="10dp"
                tools:ignore="RtlSymmetry"
                app:layout_constraintTop_toBottomOf="@+id/con_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>