<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardBackgroundColor="?attr/colorOnSecondary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/con_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:src="@drawable/lifebeam" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/con_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_layout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textSize="12sp"
                app:hintTextColor="?attr/colorSecondary"
                app:boxStrokeColor="?attr/colorSecondary"
                app:cursorColor="?attr/colorSecondary"
                app:boxStrokeErrorColor="?attr/colorOnPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:ems="10"
                    android:textColor="?attr/colorOnPrimary"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/con_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_in_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                app:boxBackgroundColor="?attr/colorOnSecondary"
                android:textColorHint="?attr/colorPrimaryVariant"
                app:boxStrokeColor="?attr/colorSecondary"
                app:cursorColor="?attr/colorSecondary"
                app:boxStrokeErrorColor="?attr/colorOnPrimary"
                app:prefixTextColor="?attr/colorPrimaryVariant"
                android:hint="@string/select"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <AutoCompleteTextView
                    android:id="@+id/tv_auto_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/con_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/amount"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_in_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:textSize="12sp"
                app:hintTextColor="?attr/colorSecondary"
                app:boxStrokeColor="?attr/colorSecondary"
                app:cursorColor="?attr/colorSecondary"
                app:boxStrokeErrorColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toEndOf="@id/tv_amount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="?attr/colorOnPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tv_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/con_in_amount"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@id/con_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:backgroundTint="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@id/con_amount"
            app:layout_constraintStart_toEndOf="@id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>